# mycelium

./: CHANGELOG.md
appserver/: config.py  pyproject.toml  requirements.txt
appserver/migrations/versions/: 002_add_google_drive_fields.py
appserver/neo4japp/: database.py
appserver/neo4japp/blueprints/: annotations.py  filesystem.py  google_drive.py  storage.py
appserver/neo4japp/lmdb_manager/: manager.py
appserver/neo4japp/models/: files.py  files_queries.py
appserver/neo4japp/schemas/: account.py  annotations.py  common.py  fields.py  filesystem.py  google_drive.py  projects.py  search.py
appserver/neo4japp/services/: file_storage.py  mozg_client.py  mozg_kg_service.py
appserver/neo4japp/services/annotations/: folder_annotation_service.py
appserver/neo4japp/services/elastic/: elastic_service.py
appserver/neo4japp/services/file_types/: providers.py
appserver/neo4japp/services/storage_drivers/: __init__.py  postgresql.py
appserver/neo4japp/storage/: __init__.py  interface.py
appserver/neo4japp/storage/adapters/: __init__.py  azure_adls.py  google_drive.py  postgres.py
appserver/tests/unit/: storage_test.py
cache-invalidator/: main.py
client/src/app/file-browser/: schema.ts
client/src/app/file-browser/models/: filesystem-object.ts
client/src/app/file-browser/services/: filesystem-object-actions.ts  (+3 more)
client/src/environments/: environment.prod.ts  environment.ts
docker/: docker-compose.dev.yml  docker-compose.services.yml
graph-db/: README.md
mozg/: Dockerfile  README.md
statistical-enrichment/statistical_enrichment/services/: mozg_client.py
statistical-enrichment/statistical_enrichment/services/enrichment/: __init__.py  enrichment_visualisation.py
(+3 files in other folders)
